# SIFT_PARALLEL

./: .gitignore  README.md
RSIR-SIFT/SAR-SIFT-opencv249/: CMakeLists.txt  Sar_sift.h  cpu_multithreadJob  main.cpp  match.cpp  match.h  sar_sift.cpp  test_cpu_multithread.sh  test_gpu_multithread.sh
RSIR-SIFT/SAR-SIFT-opencv249/demo/: test_sar_sift.cpp  test_sar_sift_omp.cpp
migrate-sift-opencv249/: .gitignore  CMakeLists.txt  display.cpp  display.h  main.cpp  match.cpp  match.h  position.txt  sift.cpp  sift.h
migrate-sift-opencv249/.cache/clangd/index/: display.cpp.5B5A1CC94C13B9BC.idx  display.h.027AEE912DC71FB9.idx  main.cpp.C87BA5D80ECFD830.idx  match.cpp.0E6F2AE1E60F15F3.idx  match.h.363098AE248A629A.idx  sift.cpp.7646FDD3FC9FEEAC.idx  sift.h.634D9C4A4E191EE2.idx
ref/: .gitignore  gitignore
ref/CudaSift-Pascal/: CMakeLists.txt
research/: 原论文部分内容整理.md.txt
sift/: .gitignore  CMakeCache.txt  CMakeLists.txt  analyze.py  cpu_multithreadJob  image.h  input.txt  main.cpp  mylist.h  sift.cpp  sift.h  test_cpu_multithread.sh  test_gpu_multithread.sh  util.h
sift-cuda/: .gitignore  CMakeLists.txt  img_cuda.cuh  main.cu  sift_cuda.cu  sift_cuda.cuh  util_cuda.cuh
sift/demo/: mtest_multithreadandSIMD.cpp  mtest_simd.cpp  test_gpu.cpp  test_match.cpp  test_multithreading.cpp  test_omp.cpp  test_peacock.cpp  test_scalability.cpp
sift/test/image/: CMakeLists.txt  main.cpp
