cmake_minimum_required(VERSION 3.22)
project( sift_opencv249 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -march=native -mavx2")
add_executable( sift_opencv249 main.cpp sift.cpp sift.h match.cpp match.h display.cpp display.h )
target_link_libraries( sift_opencv249 ${OpenCV_LIBS} )
